--- a/Test/Test/MainWindow.xaml
+++ b/Test/Test/MainWindow.xaml
@@ -1,25 +1,21 @@
 ﻿<Window x:Class="Test.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-   Title="Window1" Height="500" Width="500">
+   Title="Window1" Height="500" Width="500" >
     <Grid>
         <DockPanel HorizontalAlignment="Left" Height="31" LastChildFill="False" Margin="10,0,0,0" VerticalAlignment="Top" Width="272">
             <Menu Margin="0,0,0,10">
                 <MenuItem Header="File" Height="21">
-                    <MenuItem Header="New"/>
-                    <MenuItem Header="Open"/>
+                    <MenuItem Header="New" Click="NewTest_clk"/>
+                    <MenuItem Header="Open" Click="Open_clk"/>
                     <MenuItem Header="Save"/>
-                    <MenuItem Header="Save as"/>
+                    <MenuItem Header="Save as" Click="Save_as_clk"/>
                     <MenuItem Header="Start test"/>
-                    <MenuItem Header="Exit"/>
+                    <MenuItem Header="Exit" Click="Exit_clk"/>
                 </MenuItem>
                 <MenuItem Header="Setting">
                 </MenuItem>
-                <MenuItem Header="Group">
-                    <MenuItem Header="Add"/>
-                    <MenuItem Header="Delete"/>
-                    <MenuItem Header="Edit"/>
-                </MenuItem>
+                
                 <MenuItem Header="Task">
                     <MenuItem Header="Add"/>
                     <MenuItem Header="Delete"/>
